--- a/package.json
+++ b/package.json
@@ -2,18 +2,27 @@
   "name": "projeto02",
   "version": "0.0.1",
   "description": "",
-  "main": "dist/server.js",
+  "main": "./dist/server.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts"
+    "dev": "tsx watch ./src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "better-sqlite3": "^8.4.0",
     "fastify": "^4.18.0",
-    "typescript": "^5.1.3"
+    "knex": "^2.4.2"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "eslint": "^8.43.0",
+    "eslint-config-standard-with-typescript": "^35.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "tsx": "^3.12.7",
+    "typescript": "^5.1.3",
     "@types/node": "^20.3.1"
   }
 }
