config knex with typescript

--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "./dist/server.js",
   "scripts": {
-    "dev": "tsx watch ./src/server.ts"
+    "dev": "tsx watch ./src/server.ts",
+    "knex": "node --no-warnings --loader tsx ./node_modules/.bin/knex",
+    "lint": "eslint src --ext .ts --fix",
+    "knex:migrate:make": "knex --knexfile src/database/knexfile.ts migrate:make",
+    "knex:migrate:latest": "knex --knexfile src/database/knexfile.ts migrate:latest",
+    "knex:migrate:rollback": "knex --knexfile src/database/knexfile.ts migrate:rollback"
   },
   "keywords": [],
   "author": "",
@@ -12,9 +17,11 @@
   "dependencies": {
     "better-sqlite3": "^8.4.0",
     "fastify": "^4.18.0",
-    "knex": "^2.4.2"
+    "knex": "^2.4.2",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/node": "^20.3.1",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "eslint": "^8.43.0",
     "eslint-config-standard-with-typescript": "^35.0.0",
@@ -22,7 +29,6 @@
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
     "tsx": "^3.12.7",
-    "typescript": "^5.1.3",
-    "@types/node": "^20.3.1"
+    "typescript": "^5.1.3"
   }
 }
