--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "better-sqlite3": "^8.4.0",
+    "dotenv": "^16.3.1",
     "fastify": "^4.18.0",
     "knex": "^2.4.2",
-    "ts-node": "^10.9.1"
+    "pg": "^8.11.1",
+    "ts-node": "^10.9.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/node": "^20.3.1",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.43.0",
     "eslint-config-standard-with-typescript": "^35.0.0",
     "eslint-plugin-import": "^2.27.5",
